# antiphon

./: .antiphon.tui-settings.json  .env.example  .gitignore  Cargo.toml  LICENSE  README.md
specs/: codemap.md
src/: agent.rs  app.rs  audit.rs  cli.rs  conversation.rs  default_presets.json  error.rs  lib.rs  main.rs  tmux.rs  ui.rs  workspace.rs
src/output/: render.rs
tests/: cli.rs  help_modal.rs  integration_flow.rs  snapshots.rs
tests/fixtures/: mock_claude.sh  mock_codex.sh  mock_codex_interleaved_stream.sh  mock_codex_reasoning_stream.sh  mock_codex_tool_stream.sh  mock_codex_two_messages.sh  mock_fail.sh
