[package]
name = "antiphon"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "A terminal TUI for running two AI coding agents in turn-based dialogue."
license = "MIT"
readme = "README.md"
repository = "https://github.com/maxcaspar/antiphon"
homepage = "https://github.com/maxcaspar/antiphon"
keywords = ["tui", "terminal", "ai", "claude", "codex"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.29", features = ["event-stream"] }
futures-util = "0.3"
dirs = "5"
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
unicode-width = "0.2"
libc = "0.2"

[dev-dependencies]
assert_cmd = "2"
insta = { version = "1", features = ["json"] }
predicates = "3"
